added endpoint for fetching attribute keys
